--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hack Corona</title>
-    <title>HackCorona</title>
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/data.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HackCorona</title>
+  <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/data.css">
 </head>
 <body style="background-color: #1e1e2f;">
 
@@ -16,17 +15,60 @@
  <nav class="navbar navbar-inverse" id="myNavStyle">
   <div id="brand">
   <hr id="brandUnderline">
-  <h1>HACKCORONA</h1>
+  <h1>HackCorona</h1>
   <hr id="brandUnderline">
   </div>
   <!-- NAV BAR LINKS -->
   <ul id="styleLi" class="nav">
-      <li role="presentation" ><a href="./index.html">Home</a></li>
-      <li role="presentation"><a href="./data.html">Stats</a></li>
-      <li role="presentation"><a href="#">Symptom Checker</a></li>
-      <li role="presentation"><a href="./team.html">Team Info</a></li>
+    <li role="presentation" ><a href="./index.html">Home</a></li>
+    <li role="presentation"><a href="./data.html">Stats</a></li>
+    <li role="presentation"><a href="#">Corona Detector</a></li>
+    <li role="presentation"><a href="./team.html">Team Info</a></li>
   </ul>
 </nav>
+
+<!-- PRECAUTION-BAR -->
+
+
+<div class="container" id="precautionStyle">
+  <div class="row" >
+    <div class="col-sm-12 precautionFlex" >
+      <span class="changeContent"></span>
+    </div>
+  </div>
+</div>
+
+<!-- PAGE CONTENT START'S HERE -->
+
+<div class="container">
+  <div class="row">
+      <div class="col-sm-12 cage"  style="margin-top: 20px;">
+        <div class="infoBox ">
+          <!-- Add your content here -->
+          <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque iste, possimus praesentium aliquid sapiente odio tempora</p>
+        </div> 
+      </div>
+      <div class="col-sm-12 cage">
+        <div class="infoBox">
+          <!-- Add your content here -->
+          <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque iste, possimus praesentium aliquid sapiente odio tempora</p>
+        </div> 
+      </div>
+      <div class="col-sm-12 cage">
+        <div class="infoBox">
+          <!-- Add your content here -->
+          <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque iste, possimus praesentium aliquid sapiente odio tempora</p>
+        </div> 
+      </div>
+      <div class="col-sm-12 cage">
+        <div class="infoBox">
+          <!-- Add your content here -->
+          <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque iste, possimus praesentium aliquid sapiente odio tempora</p>
+        </div> 
+      </div>
+  </div>
+</div>
+
 
 <!-- Main Content -->
    
