--- a/data.html
+++ b/data.html
@@ -6,6 +6,7 @@
     <title>Data</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/data.css">
     <link rel="stylesheet" href="css/nav.css">
 </head>
@@ -23,7 +24,7 @@
             <ul id="styleLi" class="nav">
                 <li role="presentation" ><a href="./index.html">Home</a></li>
                 <li role="presentation"><a href="./data.html">Stats</a></li>
-                <li role="presentation"><a href="#">Corona Detector</a></li>
+                <li role="presentation"><a href="./covidtrack.html">Corona Detector</a></li>
                 <li role="presentation"><a href="./team.html">Team Info</a></li>
             </ul>
         </nav>
@@ -72,7 +73,6 @@
         </div>
 
     </div>
-
 
 
 
