--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
   <ul id="styleLi" class="nav">
     <li role="presentation" ><a href="./index.html">Home</a></li>
     <li role="presentation"><a href="./data.html">Stats</a></li>
-    <li role="presentation"><a href="#">Corona Detector</a></li>
+    <li role="presentation"><a href="./covidtrack.html">Corona Detector</a></li>
     <li role="presentation"><a href="./team.html">Team Info</a></li>
   </ul>
 </nav>
