Embedded chatbot in a phone

--- a/covidtrack.html
+++ b/covidtrack.html
@@ -16,9 +16,14 @@
   
 
   <!-- ChatBot -->
-    <div class="botui-app-container" id="help-bot">
-      <bot-ui></bot-ui>
+  <div id="phone">
+    <img src="./img/iphone.png" id="imgPhone" alt="">
+    <div id="chat">
+      <div class="botui-app-container" id="help-bot">
+        <bot-ui></bot-ui>
+      </div>
     </div>
+  </div>
 
     <!-- Modal Box for results -->
     <div id="result" style="display: flex; justify-content: center; align-items: center;">
