--- a/covidtrack.html
+++ b/covidtrack.html
@@ -18,6 +18,7 @@
   <!-- ChatBot -->
   <div class="botui-app-container" id="help-bot">
     <bot-ui></bot-ui>
+  </div>
 
     <!-- Modal Box for results -->
     <div id="result" style="display: flex; justify-content: center; align-items: center;">
